# nuance

./: .gitignore  CHANGELOG.md  Cargo.toml  MANUAL.md  README.md  build.rs  ignored.gitattributes
.github/workflows/: release.yml
.run/: Build release.run.xml  Build.run.xml  Check.run.xml  Clippy.run.xml  Run.run.xml  [gui] Build release.run.xml  [gui] Build.run.xml  [gui] Run.run.xml  run.run.xml
shaders/: color.frag  debugmouse.frag  ether.frag  explode.frag  foamy_water.frag  gameoflife.frag  interferences.frag  linear_srgb.frag  mouse.frag  noise.frag  purple.frag  seascape.frag  sliders.frag  template.frag  time.frag  uniforms.frag  wgsl.wgsl  wow.frag
shaders/demo/: ether.frag  foamy_water.frag  seascape.frag
shaders/fractals/: mandelbrot.frag
shaders/include/: header.glsl  shader.frag
src/: Nuance.glsl  app.rs  extractor.rs  gui.rs  input.rs  lib.rs  main.rs  preprocessor.rs  renderer.rs  shader.rs  shader_loader.rs  types.rs
src/app/: gui.rs  mod.rs  renderer.rs
src/renderer/: mod.rs  shader.rs
src/shader/: loader.rs  mod.rs  noise.glsl  preprocessor.rs  quad.wgsl  renderer.rs  stdlib.glsl
src/shader_renderer/: mod.rs  screen.vert
src/shaders/: Nuance.glsl  red.frag  screen.vert  screen.vert.spv
