[package]
name = "nuance"
version = "0.3.0"
authors = ["Guillaume Anthouard <guillaume.anthouard@hotmail.fr>"]
edition = "2018"
include = ["src/**/*", "LICENSE", "README.md"]
description = "A tool to run your shaders on the gpu. Also a good demo application for wgpu-rs."
homepage = "https://github.com/Gui-Yom/nuance"
repository = "https://github.com/Gui-Yom/nuance"
license = "Apache-2.0"
readme = "README.md"
keywords = ["shaders", "glsl", "graphics", "visualization", "wgpu"]
categories = ["graphics", "rendering", "visualization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 4

[dependencies]
# GPU API
wgpu = "0.8"
# Windowing
winit = { version = "0.25", features = ["mint"] }
# Async runtime
futures-executor = "0.3"
# Shader compilation
shaderc = "0.7"
# GLSL parser
glsl-lang = "0.1"
# Error types
anyhow = "1"
# Math types
mint = "0.5"
# Filesystem watcher
notify = "4"
# File dialogs
rfd = "0.4"
# Logger api
log = { version = "0.4", features = ["std"] }
# Logger implementation
simplelog = "0.10"
# Profiling
puffin = "0.5"
# GUI
egui = { version = "0.12" }
# Profiling ui
puffin_egui = "0.3"
# Image encoding
image = { version = "0.23", default-features = false, features = ["png", "bmp", "jpeg", "gif"] }

# Converting structs to uniforms with alignment
[dependencies.crevice]
version = "0.6" # Blocker in upstream with mint types
git = "https://github.com/LPGhatguy/crevice"
rev = "c81234662e5118d115922e89d0f0f6fbc9ac560f"

# Render pass for egui with wgpu
[dependencies.egui_wgpu_backend]
version = "0.8"
#git = "https://github.com/hasenbanck/egui_wgpu_backend"
#rev = "b52664ab966ed9c9d34d2101c3772b9b21e195f3"

# Egui platform impl with winit
[dependencies.egui_winit_platform]
version = "0.7" # Blocker in upstream with clickable links and winit version
features = ["webbrowser"]
git = "https://github.com/hasenbanck/egui_winit_platform"
rev = "9fd92782d8de22d7882168d7b5ae7a2eb02448d9"
