[package]
name = "nuance"
version = "0.4.0"
authors = ["Guillaume Anthouard <guillaume.anthouard@hotmail.fr>"]
edition = "2018"
include = ["src/**/*", "LICENSE", "README.md"]
description = "A tool to run your shaders on the gpu. Also a good demo application for wgpu-rs."
homepage = "https://github.com/Gui-Yom/nuance"
repository = "https://github.com/Gui-Yom/nuance"
license = "Apache-2.0"
readme = "README.md"
keywords = ["shaders", "glsl", "graphics", "visualization", "wgpu"]
categories = ["graphics", "rendering", "visualization"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 4

# Enable optimizations for the image crate in dev mode
# it's just too damn slow for anything
[profile.dev.package.image]
opt-level = 3
[profile.dev.package.png]
opt-level = 3
[profile.dev.package.deflate]
opt-level = 3

[dependencies]
# Error types
anyhow = "1"
# GUI
egui = { version = "0.14", features = ["mint"] }
# Async runtime
futures-executor = "0.3"
# GLSL parser
glsl-lang = "0.1"
# Image encoding for export
image = { version = "0.23", default-features = false, features = ["png", "bmp", "jpeg", "gif"] }
lazy_static = "1.4"
# Logger api
log = { version = "0.4", features = ["std"] }
# Math types
mint = "0.5"
# Filesystem watcher
notify = "4"
# Profiling
puffin = "0.9"
# Profiling ui
puffin_egui = "0.8"
# File dialogs
rfd = "0.5"
# GLSL compilation
# I consider naga to be too damn much instable atm (plus it doesn't support includes)
shaderc = "0.7"
# Logger implementation
env_logger = "0.9"
# GPU API
wgpu = { version = "0.10", features = ["spirv"] }
# Shell/Windowing
winit = { version = "0.25", features = ["mint"] }

# Converting structs to uniforms with alignment
[dependencies.crevice]
version = "0.7"
#git = "https://github.com/LPGhatguy/crevice"
#rev = "78165c1bdb22c699b2523cdfa4bd13dd60ced79f"

# Render pass for egui with wgpu
[dependencies.egui_wgpu_backend]
version = "0.12"
#git = "https://github.com/hasenbanck/egui_wgpu_backend"
#rev = "be10e8e89e3cfc2f92a2c21eee2928db28e28c7d"
#path = "../egui_wgpu_backend"

# Egui platform impl with winit
[dependencies.egui_winit_platform]
version = "0.10"
features = ["webbrowser"]
#git = "https://github.com/Gui-Yom/egui_winit_platform"
#rev = "06f525497f9f61bbb7a4c9a78111d16bb2d695b4"
#path = "../egui_winit_platform"
