[package]
name = "nuance"
version = "0.4.0"
authors = ["Guillaume Anthouard <guillaume.anthouard@hotmail.fr>"]
edition = "2021"
include = ["src/**/*", "LICENSE", "README.md"]
description = "A tool to run your shaders on the gpu. Also a good demo application for wgpu-rs."
homepage = "https://github.com/Gui-Yom/nuance"
repository = "https://github.com/Gui-Yom/nuance"
license = "Apache-2.0"
readme = "README.md"
keywords = ["shaders", "glsl", "graphics", "visualization", "wgpu"]
categories = ["graphics", "rendering", "visualization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 4

# Enable optimizations for the image crate in dev mode
# it's just too damn slow for anything
[profile.dev.package.image]
opt-level = 3
[profile.dev.package.png]
opt-level = 3
[profile.dev.package.deflate]
opt-level = 3

[dependencies]
# Error types
anyhow = "1"
# GUI
egui = { version = "0.17", features = ["mint"] }
egui-winit = "0.17"
# Async runtime
futures-executor = "0.3"
# GLSL parser
glsl-lang = { version = "0.2", features = ["lexer-v2-min"] }
lang-util = "0.2"
# Image encoding for export
image = { version = "0.24", default-features = false, features = ["png", "bmp", "jpeg", "gif"] }
lazy_static = "1.4"
# Logger api
log = { version = "0.4", features = ["std"] }
# Math types
mint = "0.5"
# Filesystem watcher
notify = "4"
# Profiling
puffin = "0.13"
# Profiling ui
puffin_egui = { version = "0.13", optional = true }
# File dialogs
rfd = "0.8"
# GLSL compilation
# I consider naga to be too damn much instable atm (plus it doesn't support includes)
shaderc = "0.7"
# Logger implementation
env_logger = "0.9"
# GPU API
wgpu = { version = "0.12", features = ["spirv"] }
# Shell/Windowing
winit = { version = "0.26", features = ["mint"] }

# Converting structs to uniforms with alignment
[dependencies.crevice]
version = "0.8"
#git = "https://github.com/LPGhatguy/crevice"
#rev = "78165c1bdb22c699b2523cdfa4bd13dd60ced79f"

# Render pass for egui with wgpu
[dependencies.egui_wgpu_backend]
version = "0.17"
#git = "https://github.com/Jengamon/egui_wgpu_backend"
#branch = "egui-0.16"
#rev = "961125e7bd2c71c5ead1d61a7ca7ffa8c0d17f48"
#path = "../egui_wgpu_backend"
